@@ -1,7 +1,7 @@
 #!perl -T
 use strict;
 use warnings FATAL => 'all';
-use Test::More tests => 16;
+use Test::More tests => 19;
 
 use Spreadsheet::HTML;
 
@@ -17,8 +17,6 @@ is Spreadsheet::HTML::calendar( %attrs ),
     '<table><caption style="font-weight: bold">July 1970</caption><tr><th>Sun</th><th>Mon</th><th>Tue</th><th>Wed</th><th>Thu</th><th>Fri</th><th>Sat</th></tr><tr><td style="text-align: right">&nbsp;</td><td style="text-align: right">&nbsp;</td><td style="text-align: right">&nbsp;</td><td style="text-align: right">1</td><td style="text-align: right">2</td><td style="text-align: right">3</td><td style="text-align: right">4</td></tr><tr><td style="text-align: right">5</td><td style="text-align: right">6</td><td style="text-align: right">7</td><td style="text-align: right">8</td><td style="text-align: right">9</td><td style="text-align: right">10</td><td style="text-align: right">11</td></tr><tr><td style="text-align: right">12</td><td style="text-align: right">13</td><td style="text-align: right">14</td><td style="text-align: right">15</td><td style="text-align: right">16</td><td style="text-align: right">17</td><td style="text-align: right">18</td></tr><tr><td style="text-align: right">19</td><td style="text-align: right">20</td><td style="text-align: right">21</td><td style="text-align: right">22</td><td style="text-align: right">23</td><td style="text-align: right">24</td><td style="text-align: right">25</td></tr><tr><td style="text-align: right">26</td><td style="text-align: right">27</td><td style="text-align: right">28</td><td style="text-align: right">29</td><td style="text-align: right">30</td><td style="text-align: right">31</td><td style="text-align: right">&nbsp;</td></tr></table>',
     "calendar as function";
 
-SKIP: {
-    skip "broken tests - must merge attrs first", 6;
 is $generator->calendar( -4 => { class => 'today' } ),
     '<table><caption style="font-weight: bold">July 1970</caption><tr><th>Sun</th><th>Mon</th><th>Tue</th><th>Wed</th><th>Thu</th><th>Fri</th><th>Sat</th></tr><tr><td style="text-align: right">&nbsp;</td><td style="text-align: right">&nbsp;</td><td style="text-align: right">&nbsp;</td><td style="text-align: right">1</td><td style="text-align: right">2</td><td style="text-align: right">3</td><td class="today" style="text-align: right">4</td></tr><tr><td style="text-align: right">5</td><td style="text-align: right">6</td><td style="text-align: right">7</td><td style="text-align: right">8</td><td style="text-align: right">9</td><td style="text-align: right">10</td><td style="text-align: right">11</td></tr><tr><td style="text-align: right">12</td><td style="text-align: right">13</td><td style="text-align: right">14</td><td style="text-align: right">15</td><td style="text-align: right">16</td><td style="text-align: right">17</td><td style="text-align: right">18</td></tr><tr><td style="text-align: right">19</td><td style="text-align: right">20</td><td style="text-align: right">21</td><td style="text-align: right">22</td><td style="text-align: right">23</td><td style="text-align: right">24</td><td style="text-align: right">25</td></tr><tr><td style="text-align: right">26</td><td style="text-align: right">27</td><td style="text-align: right">28</td><td style="text-align: right">29</td><td style="text-align: right">30</td><td style="text-align: right">31</td><td style="text-align: right">&nbsp;</td></tr></table>',
     "calendar can specify day (method)";
@@ -42,7 +40,6 @@ is $generator->calendar( -4 => { style => { 'text-weight' => 'bold' } } ),
 is Spreadsheet::HTML::calendar( %attrs, -4 => { style => { 'text-weight' => 'bold' } } ),
     '<table><caption style="font-weight: bold">July 1970</caption><tr><th>Sun</th><th>Mon</th><th>Tue</th><th>Wed</th><th>Thu</th><th>Fri</th><th>Sat</th></tr><tr><td style="text-align: right">&nbsp;</td><td style="text-align: right">&nbsp;</td><td style="text-align: right">&nbsp;</td><td style="text-align: right">1</td><td style="text-align: right">2</td><td style="text-align: right">3</td><td style="text-weight: bold">4</td></tr><tr><td style="text-align: right">5</td><td style="text-align: right">6</td><td style="text-align: right">7</td><td style="text-align: right">8</td><td style="text-align: right">9</td><td style="text-align: right">10</td><td style="text-align: right">11</td></tr><tr><td style="text-align: right">12</td><td style="text-align: right">13</td><td style="text-align: right">14</td><td style="text-align: right">15</td><td style="text-align: right">16</td><td style="text-align: right">17</td><td style="text-align: right">18</td></tr><tr><td style="text-align: right">19</td><td style="text-align: right">20</td><td style="text-align: right">21</td><td style="text-align: right">22</td><td style="text-align: right">23</td><td style="text-align: right">24</td><td style="text-align: right">25</td></tr><tr><td style="text-align: right">26</td><td style="text-align: right">27</td><td style="text-align: right">28</td><td style="text-align: right">29</td><td style="text-align: right">30</td><td style="text-align: right">31</td><td style="text-align: right">&nbsp;</td></tr></table>',
     "calendar clobbers default style (function)";
-};
 
 is $generator->calendar( table => { class => 'table' } ),
     '<table class="table"><caption style="font-weight: bold">July 1970</caption><tr><th>Sun</th><th>Mon</th><th>Tue</th><th>Wed</th><th>Thu</th><th>Fri</th><th>Sat</th></tr><tr><td style="text-align: right">&nbsp;</td><td style="text-align: right">&nbsp;</td><td style="text-align: right">&nbsp;</td><td style="text-align: right">1</td><td style="text-align: right">2</td><td style="text-align: right">3</td><td style="text-align: right">4</td></tr><tr><td style="text-align: right">5</td><td style="text-align: right">6</td><td style="text-align: right">7</td><td style="text-align: right">8</td><td style="text-align: right">9</td><td style="text-align: right">10</td><td style="text-align: right">11</td></tr><tr><td style="text-align: right">12</td><td style="text-align: right">13</td><td style="text-align: right">14</td><td style="text-align: right">15</td><td style="text-align: right">16</td><td style="text-align: right">17</td><td style="text-align: right">18</td></tr><tr><td style="text-align: right">19</td><td style="text-align: right">20</td><td style="text-align: right">21</td><td style="text-align: right">22</td><td style="text-align: right">23</td><td style="text-align: right">24</td><td style="text-align: right">25</td></tr><tr><td style="text-align: right">26</td><td style="text-align: right">27</td><td style="text-align: right">28</td><td style="text-align: right">29</td><td style="text-align: right">30</td><td style="text-align: right">31</td><td style="text-align: right">&nbsp;</td></tr></table>',
@@ -75,4 +72,26 @@ is $generator->calendar( -Mon => { class => ':(' }, -Wed => { class => 'hump-day
 is Spreadsheet::HTML::calendar( %attrs, -Mon => { class => ':(' }, -Wed => { class => 'hump-day' }, -Fri => { class => 'TGIF' } ),
     '<table><caption style="font-weight: bold">July 1970</caption><tr><th>Sun</th><th class=":(">Mon</th><th>Tue</th><th class="hump-day">Wed</th><th>Thu</th><th class="TGIF">Fri</th><th>Sat</th></tr><tr><td style="text-align: right">&nbsp;</td><td class=":(" style="text-align: right">&nbsp;</td><td style="text-align: right">&nbsp;</td><td class="hump-day" style="text-align: right">1</td><td style="text-align: right">2</td><td class="TGIF" style="text-align: right">3</td><td style="text-align: right">4</td></tr><tr><td style="text-align: right">5</td><td class=":(" style="text-align: right">6</td><td style="text-align: right">7</td><td class="hump-day" style="text-align: right">8</td><td style="text-align: right">9</td><td class="TGIF" style="text-align: right">10</td><td style="text-align: right">11</td></tr><tr><td style="text-align: right">12</td><td class=":(" style="text-align: right">13</td><td style="text-align: right">14</td><td class="hump-day" style="text-align: right">15</td><td style="text-align: right">16</td><td class="TGIF" style="text-align: right">17</td><td style="text-align: right">18</td></tr><tr><td style="text-align: right">19</td><td class=":(" style="text-align: right">20</td><td style="text-align: right">21</td><td class="hump-day" style="text-align: right">22</td><td style="text-align: right">23</td><td class="TGIF" style="text-align: right">24</td><td style="text-align: right">25</td></tr><tr><td style="text-align: right">26</td><td class=":(" style="text-align: right">27</td><td style="text-align: right">28</td><td class="hump-day" style="text-align: right">29</td><td style="text-align: right">30</td><td class="TGIF" style="text-align: right">31</td><td style="text-align: right">&nbsp;</td></tr></table>',
     "calendar can mark rows by name of day (function)";
+
+
+eval "use Test::MockObject";
+SKIP: {
+skip "Test::MockObject not available", 2 if $@;
+
+my $mock = Test::MockObject->new;
+$mock->fake_module( 'Time::Piece', mday => sub { 4 } );
+my $mday = Time::Piece->new->mday;
+is $mday, 4, "mocked mday successfully";
+
+is $generator->calendar( -4 => { class => 'today' } ),
+    '<table><caption style="font-weight: bold">July 1970</caption><tr><th>Sun</th><th>Mon</th><th>Tue</th><th>Wed</th><th>Thu</th><th>Fri</th><th>Sat</th></tr><tr><td style="text-align: right">&nbsp;</td><td style="text-align: right">&nbsp;</td><td style="text-align: right">&nbsp;</td><td style="text-align: right">1</td><td style="text-align: right">2</td><td style="text-align: right">3</td><td class="today" style="text-align: right">4</td></tr><tr><td style="text-align: right">5</td><td style="text-align: right">6</td><td style="text-align: right">7</td><td style="text-align: right">8</td><td style="text-align: right">9</td><td style="text-align: right">10</td><td style="text-align: right">11</td></tr><tr><td style="text-align: right">12</td><td style="text-align: right">13</td><td style="text-align: right">14</td><td style="text-align: right">15</td><td style="text-align: right">16</td><td style="text-align: right">17</td><td style="text-align: right">18</td></tr><tr><td style="text-align: right">19</td><td style="text-align: right">20</td><td style="text-align: right">21</td><td style="text-align: right">22</td><td style="text-align: right">23</td><td style="text-align: right">24</td><td style="text-align: right">25</td></tr><tr><td style="text-align: right">26</td><td style="text-align: right">27</td><td style="text-align: right">28</td><td style="text-align: right">29</td><td style="text-align: right">30</td><td style="text-align: right">31</td><td style="text-align: right">&nbsp;</td></tr></table>',
+    "calendar can specify day (method)";
+
+is Spreadsheet::HTML::calendar( %attrs, -4 => { class => 'today' } ),
+    '<table><caption style="font-weight: bold">July 1970</caption><tr><th>Sun</th><th>Mon</th><th>Tue</th><th>Wed</th><th>Thu</th><th>Fri</th><th>Sat</th></tr><tr><td style="text-align: right">&nbsp;</td><td style="text-align: right">&nbsp;</td><td style="text-align: right">&nbsp;</td><td style="text-align: right">1</td><td style="text-align: right">2</td><td style="text-align: right">3</td><td class="today" style="text-align: right">4</td></tr><tr><td style="text-align: right">5</td><td style="text-align: right">6</td><td style="text-align: right">7</td><td style="text-align: right">8</td><td style="text-align: right">9</td><td style="text-align: right">10</td><td style="text-align: right">11</td></tr><tr><td style="text-align: right">12</td><td style="text-align: right">13</td><td style="text-align: right">14</td><td style="text-align: right">15</td><td style="text-align: right">16</td><td style="text-align: right">17</td><td style="text-align: right">18</td></tr><tr><td style="text-align: right">19</td><td style="text-align: right">20</td><td style="text-align: right">21</td><td style="text-align: right">22</td><td style="text-align: right">23</td><td style="text-align: right">24</td><td style="text-align: right">25</td></tr><tr><td style="text-align: right">26</td><td style="text-align: right">27</td><td style="text-align: right">28</td><td style="text-align: right">29</td><td style="text-align: right">30</td><td style="text-align: right">31</td><td style="text-align: right">&nbsp;</td></tr></table>',
+    "calendar can specify day (function)";
+
+};
+
+
 
