@@ -1,6 +1,7 @@
 Revision history for Spreadsheet-HTML
 
 1.19
+    - fixed minor bug in calendar() when 'today' is actually today
 
 1.18
     - added pad param for conway (used with wechsler)
